--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rspress": "^1.35.3"
   },
   "devDependencies": {
     "@types/node": "^16",
+    "@types/react": "^18.3.12",
     "chalk": "^5.3.0",
     "husky": "^9.1.6"
   }
