--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "rspress": "^1.35.3"
   },
   "devDependencies": {
+    "@rspress/plugin-shiki": "^1.37.4",
     "@types/node": "^16",
     "@types/react": "^18.3.12",
     "chalk": "^5.3.0",
