update(guide): widget core concepts

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "rspress": "^1.35.3"
+    "rspress": "^1.35.3",
+    "rspress-plugin-mermaid": "^0.3.0"
   },
   "devDependencies": {
     "@rspress/plugin-shiki": "^1.37.4",
