feat: add google analytics and CI config
1. Add google analytics
2. Update CI config
3. Update README.md

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,10 @@
-name: Deploy Makepad Treasures to GitHub Pages
+name: Makepad Book CI/CD
 
 on:
   push:
     branches: [main]
+  pull_request:
+    branches: [main, preview]
 
   workflow_dispatch:
 
@@ -45,6 +47,7 @@ jobs:
 
   # Deployment job
   deploy:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
