--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
           cache: pnpm
       - name: Setup Pages
         uses: actions/configure-pages@v5
+        if: github.repository_owner == 'project-robius-china'
       - name: Install dependencies
         run: pnpm install
       - name: Build with Rspress
